--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
    
     
    <div class="TeamLogo">
-   <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/Red%20Devils%20Sim%20Racing%20logo_zpsugsj2gvj.png">
+   <img src="https://preview.ibb.co/hjuZsv/Red_Devils_Sim_Racing_logo.png">
    </div>
    
    <div class ="TwitterLogo">
@@ -340,7 +340,7 @@
             /* size of bullet elment */
             width: 30px;
             height: 30px;
-            background: url('http://i1273.photobucket.com/albums/y406/DJMorris1997/b05_zpsufjpyjk2.png') no-repeat;
+            background: url('https://image.ibb.co/f4C7ea/b05.png') no-repeat;
             overflow: hidden;
             cursor: pointer;
         }
@@ -364,7 +364,7 @@
             width: 10px;
             height: 10px;
             cursor: pointer;
-            background: url('http://i1273.photobucket.com/albums/y406/DJMorris1997/a22_zps2eprwwzw.png') center center no-repeat;
+            background: url('https://image.ibb.co/kpvSea/a22.png') center center no-repeat;
             overflow: hidden;
         }
         .jssora22l { background-position: -10px -31px; }
