--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
    
    <div class ="TwitterLogo">
    <a href="https://twitter.com/RedDevilsSimRC" target="_top">
-   <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/Twitter_Logo_Blue_zpscbzppepw.png" id ="image" border="0" alt=" photo Twitter_Logo_Blue_zpscbzppepw.png"/></a>
+   <img src="https://preview.ibb.co/f3ctkF/Twitter_logo.png" id ="image" border="0" alt=" photo Twitter_Logo_Blue_zpscbzppepw.png"/></a>
    </div>
    <div id="Navy">
    <div class= "MyNav" id="LinkHome">
@@ -385,7 +385,7 @@
 
         <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 500px; height: 300px; overflow: hidden;">
             <div data-b="0" data-p="170.00" data-po="80% 55%" style="display: none;">
-                <img data-u="image"src="http://i1273.photobucket.com/albums/y406/DJMorris1997/Home%20Page%20intro%20pic_zpsvl2bi2jg.png"/>
+                <img data-u="image"src="https://preview.ibb.co/iNGaza/Home_Page_intro_pic_min.jpg"/>
             </div>
 
             <div data-b="1" data-p="170.00" style="display: none;">
@@ -487,7 +487,7 @@
 
 <div class="AlishaPic">
 <a href="http://www.alisharoland.com/"target="_top">
-<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/AlishaPic_zpspzgrjzyw-min_zpsrvzkuatl.jpg" border="0" alt=" photo AlishaPic_zpspzgrjzyw-min_zpsrvzkuatl.jpg"/></a>
+<img src="https://image.ibb.co/eD2tkF/Alisha_Pic_zpspzgrjzyw_min.jpg" border="0" alt=" photo AlishaPic_zpspzgrjzyw-min_zpsrvzkuatl.jpg"/></a>
 </div>
 </div>
 
