--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
      .AboutText p {color:black;font-family:"arial";font-size:24px;position:relative;top:-80px;}
      .NewContainer {display:inline-block;width:1500px;}
      .AlishaPic img {height:1005px;width:715px;float:left;position:relative;}
+  .twitterImage {width:200px;height:200px;}
     
      H1{font-family:"Arial Nova Light";font-size:80px;color:white;}
      H6 {font-family:Meiryo; color:white;position:absolute;top:130px;left:360px;font-size:20px;text-shadow: 0 0 9px red;}
@@ -172,7 +173,7 @@
    
    <div class ="TwitterLogo">
    <a href="https://twitter.com/RedDevilsSimRC" target="_top">
-   <img src="https://preview.ibb.co/f3ctkF/Twitter_logo.png" id ="image" border="0" alt=" photo Twitter_Logo_Blue_zpscbzppepw.png"/></a>
+   <img src="https://preview.ibb.co/f3ctkF/Twitter_logo.png" id ="twitterImage" border="0" alt=" photo Twitter_Logo_Blue_zpscbzppepw.png"/></a>
    </div>
    <div id="Navy">
    <div class= "MyNav" id="LinkHome">
